trunk/Archive2/b3/62c42c810d813b/output
main.cpp:4:5: error: only function and template parameters can be parameter packs
    ...
    ^
main.cpp:12:1: error: C++ requires a type specifier for all declarations
mytype x = 123_mytype;
^
main.cpp:11:1: error: only function and template parameters can be parameter packs
...
^
main.cpp:12:7: error: expected ';' after top level declarator
mytype x = 123_mytype;
      ^
      ;
4 errors generated.
